--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My project123</title>
+    <title>My project</title>
 </head>
 <body>
     <h1>My project</h1>
-    <form action=""></form>
+        <form action="" method="post"><input type="text" name="x">
+        <button>Search</button>
+    </form>
 </body>
 </html>
