--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>My project</h1>
-        <form action="" method="post"><input type="text" name="x">
+        <form action="" method="post">
+            <input type="text" name="x">
+            <input type="text" name="y">
+            <input type="text" name="z">
+        </form>
         <button>Search</button>
     </form>
 </body>
