3 placeholder was created

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 <body>
     <h1>My project</h1>
         <form action="" method="post">
-            <input type="text" name="x">
-            <input type="text" name="y">
-            <input type="text" name="z">
+            <div class="from-field">
+                x:
+                <input type="text" name="x" placeholder="x value">
+            </div>
+            <div class="from-field">
+                y:
+                <input type="text" name="y" placeholder="y value">
+            </div>
+            <div class="from-field">
+                z:
+                <input type="text" name="z" placeholder="z value">
+            </div>
         </form>
         <button>Search</button>
     </form>
