password form was create

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 z:
                 <input type="text" name="z" placeholder="z value">
             </div>
+            <div class="from-field">
+                Username:
+                <input type="text" name="username">
+            </div>
+            <div class="from-field">
+                Password:
+                <input type="password" name="password">
+            </div>
         </form>
         <button>Search</button>
     </form>
