checkbox remember me was create

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 Password:
                 <input type="password" name="password">
             </div>
+            <div class="from-field">
+                <input type="checkbox" name="remember" value="123" checked>
+                Remember me
+            </div>
         </form>
         <button>Search</button>
     </form>
