button RESET was ceated

--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
                 <input type="text" name="z" placeholder="z value">
             </div>
             <label class="from-field">
+                Email:
+                <input type="email" name="email" required>
+            </label>
+            <label class="from-field">
                 Username:
                 <input type="text" name="username">
             </label>
             <label class="from-field">
                 Password:
-                <input type="password" name="password">
+                <input type="password" name="password" recuired>
             </label>
             <div class="from-field">
-                <input type="checkbox" name="terms" id="terms-and-conditions">
+                <input type="checkbox" name="terms" id="terms-and-conditions" required>
                 <label for="terms-and-conditions">
                     I agree terms and conditions
                 </label>
@@ -42,6 +46,7 @@
             </label>
         </form>
         <button>Sign up</button>
+        <button type="reset">Reset</button>
     </form>
 </body>
 </html>
