--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             </div>
             <label class="from-field">
                 Email:
-                <input type="email" name="email" required>
+                <input type="email" name="email" placeholder="Please enter an email" class="field" required>
             </label>
             <label class="from-field">
                 Username:
-                <input type="text" name="username">
+                <input type="text" name="username" class="field">
             </label>
             <label class="from-field">
                 Password:
-                <input type="password" name="password" recuired>
+                <input type="password" name="password" class="field" minlength="5" recuired>
             </label>
             <div class="from-field">
                 <input type="checkbox" name="terms" id="terms-and-conditions" required>
